--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Minimalist RPG prototype",
   "scripts": {
-    "test": "node tests/loadGame.test.js"
+    "test": "node tests/loadGame.test.js",
+    "start": "node server.js"
   },
   "license": "MIT"
 }
